--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <meta name="description" content="Portfolio website showcasing my skills and projects as a Full Stack Web Developer specializing in React, Next.js, Node.js, and Tailwind CSS." />
     <meta name="author" content="Developer Portfolio" />
 
-    <meta property="og:title" content="Developer Portfolio | Full Stack Web Developer" />
+    <meta property="og:title" content="Sumaiya Portfolio | Web Developer" />
     <meta property="og:description" content="Portfolio website showcasing my skills and projects as a Full Stack Web Developer specializing in React, Next.js, Node.js, and Tailwind CSS." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/portfolio.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
