--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    <link rel="icon" type="image/svg+xml" href="/resume.png" >
+    <link rel="icon" href="/public/resume.png" type="image/x-icon" />
   </head>
 
   <body>
